1.搭建feign项目，实现服务间的调用 2.修改ribbon项目，实现断路器的应用

--- a/RainCloud-master/pom.xml
+++ b/RainCloud-master/pom.xml
@@ -16,6 +16,7 @@
 		<module>common</module>
 		<module>service-hello</module>
 		<module>service-ribbon</module>
+		<module>service-feign</module>
 	</modules>
 
 	<parent>
