--- a/config/config-client-dev.properties
+++ b/config/config-client-dev.properties
@@ -1,11 +1,11 @@
-spring.application.name=config-server
-server.port=8887
+#spring.application.name=config-server
+#server.port=8887
 
-spring.cloud.config.server.git.uri=https://github.com/my-mark/
-spring.cloud.config.server.git.searchPaths=RainCloud
-spring.cloud.config.label=master
-spring.cloud.config.server.git.username= your username
-spring.cloud.config.server.git.password= your password
-eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
+#spring.cloud.config.server.git.uri=https://github.com/my-mark/
+#spring.cloud.config.server.git.searchPaths=RainCloud
+#spring.cloud.config.label=master
+#spring.cloud.config.server.git.username= your username
+#spring.cloud.config.server.git.password= your password
+#eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
 
 foo = mark
