--- a/config/config-client-dev.properties
+++ b/config/config-client-dev.properties
@@ -8,4 +8,4 @@ server.port=8886
 #spring.cloud.config.server.git.password= your password
 #eureka.client.serviceUrl.defaultZone=http://localhost:8889/eureka/
 
-foo = mark——rain
+foo = mark_rain
